# projects-repo

./: .bash_aliases  .gitconfig  .gitignore  README.md  Untitled.ipynb  dockerfile  environment.yml  requirements.txt  setup.py  testfile  transaction_analysis.ipynb
.devcontainer/: devcontainer.desktop.json  devcontainer.json  devcontainer.laptop.json
common/: __init__.py  assertions.py  (+2 more)
pyprojects/neuron-tracking-experimens/: data.py  experimenter.py  experiments.py  models.py  pyproject.toml  run_docker.sh  run_experiment.py  trainer.py
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-09-10/: events.out.tfevents.1647727750.abhijeet-MS-7C02.18014.0.v2
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-15-22/: events.out.tfevents.1647728122.abhijeet-MS-7C02.20146.0.v2
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-16-40/: events.out.tfevents.1647728200.abhijeet-MS-7C02.20661.0.v2
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-17-41/: events.out.tfevents.1647728261.abhijeet-MS-7C02.21034.0.v2
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-18-00/: events.out.tfevents.1647728280.abhijeet-MS-7C02.21225.0.v2
pyprojects/neuron-tracking-experimens/tensorboard/experiments/exp0.2022-03-19.17-20-34/: events.out.tfevents.1647728434.abhijeet-MS-7C02.22186.0.v2
pyprojects/projectslib/: py_utils.py  pyproject.toml  tf_assert.py
pyprojects/projectslib/projectslib/: data.py  file_utils.py  py_utils.py
(+189 files in other folders)
