[tool.poetry]
name = "projectslib"
version = "0.1.0"
description = "Library for code for my projects"
authors = ["jetm <abhmul@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
tensorflow = "^2.8.0"
scipy = "^1.8.0"
pandas = "^1.4.1"
tqdm = "^4.63.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
